--- a/hono-lambda/package.json
+++ b/hono-lambda/package.json
@@ -22,8 +22,10 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.3",
     "aws-cdk-lib": "2.180.0",
     "constructs": "^10.0.0",
-    "hono": "^4.7.4"
+    "hono": "^4.7.4",
+    "zod": "^3.24.2"
   }
 }
